# vaspNestAgent

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  infrastructure.yml  jira-integration.yml
.kiro/specs/nest-thermostat-agent/: design.md  requirements.md  tasks.md
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  getting-started.md  index.md  jira-integration.md  jira-stories.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.tsx  vite-env.d.ts
frontend/src/apollo/: client.ts
frontend/src/components/: AdjustmentHistory.tsx  ConnectionStatus.tsx  Dashboard.test.tsx  Dashboard.tsx  TemperatureChart.tsx  TemperatureDisplay.tsx  index.ts
frontend/src/graphql/: queries.ts
frontend/src/styles/: index.css
frontend/src/test/: setup.ts
scripts/: create-jira-stories.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  logging.py  nest.py  orchestration.py
src/graphql/: __init__.py  resolvers.py  schema.py
src/models/: __init__.py  data.py
src/server/: __init__.py  graphql.py  health.py
src/services/: __init__.py  cloudwatch.py  google_voice.py  nest_api.py
terraform/: .terraform.lock.hcl  README.md  backend.tf  main.tf  outputs.tf  variables.tf
terraform/modules/cloudwatch/: dashboard.tf  main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/modules/kubernetes/: deployment.tf  main.tf  outputs.tf  service.tf  variables.tf
terraform/modules/secretsmanager/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/property/: __init__.py  test_config.py  test_data_models.py  test_error_handling.py  test_graphql.py  test_logging.py  test_metrics.py  test_notification.py  test_retry_logic.py  test_temperature_logic.py
tests/unit/: __init__.py
